# BridgeMaker

./: .gitignore  .gitmodules  Bridge-Maker.sln  BridgeMaker.cppm  BridgeMaker.hpp  CMakeLists.txt  README.md
Bridge-Maker/: Bridge-Maker.vcxproj  Bridge-Maker.vcxproj.filters
Bridge-Maker-Test/: Bridge-Maker-Test.vcxproj
Bridge-Maker-Test/src/: test.cpp
Bridge-Maker/src/: Bridge_Maker.h
Bridge-Maker/src/Bridge-Maker/: Application.cpp  Application.h  Core.h  EntryPoint.h
Sandbox/: CMakeLists.txt  imgui.ini  main.cpp
Sandbox/res/shaders/: simple.shader
Sandbox/script/: genarate.bat
Sandbox/src/: cards.cppm  sandbox.cppm  scenes.cppm
impl/app/: application.cpp  controller.cpp  event.cpp  layer.cpp  manager.cpp
impl/application/: application.cpp
impl/core/: application.cpp  camera.cpp  image.cpp  layer.cpp  layer_imgui.cpp  log.cpp  transform.cpp
impl/core/layers/: layer_imgui.cpp
impl/gfx/: camera.cpp  image.cpp  manager.cpp  material.cpp  mesh.cpp  object.cpp  scene.cpp  source.cpp  transform.cpp  utility.cpp
impl/gfx/opengl/: buffer.cpp  context.cpp  renderer.cpp  shader.cpp  texture.cpp  verify.cpp
impl/graphic/: particle_sustem.cpp
impl/graphic/opengl/: buffer.cpp  camera.cpp  context.cpp  index_buffer.cpp  material.cpp  object.cpp  opengl_camera.cpp  opengl_context.cpp  opengl_renderer.cpp  primitives.cpp  renderer.cpp  scene.cpp  screen_camera.cpp  screen_renderer.cpp  shader.cpp  texture.cpp  vertex_array.cpp  vertex_buffer.cpp
impl/platform/: controller.cpp
impl/platform/xplatform/: xcursor.cpp  xinput.cpp  xwindow.cpp
impl/res/: primitives.cpp  shader.cpp
impl/ui/: debug.cpp
include/: bridge_maker.hpp  imgui.hpp  pch.hpp
include/core/: application.hpp  core.hpp  layer.hpp  layer_stack.hpp  log.hpp  timer.hpp  window.hpp
include/core/events/: app_event.hpp  event.hpp  key_event.hpp  mouse_event.hpp
include/graphic/: context.hpp  renderer.hpp
include/graphic/opengl/: index_buffer.hpp  opengl.hpp  opengl_context.hpp  opengl_renderer.hpp  shader.hpp  vertex_array.hpp  vertex_buffer.hpp
include/platform/: cursor.hpp  input.hpp  window.hpp
include/platform/windows/: windows_window.hpp
include/platform/xplatform/: xcursor.hpp  xinput.hpp  xwindow.hpp
mod/: BridgeMaker.cppm  bmpch.hpp
mod/app/: application.cppm  controller.cppm  event.cppm  frame.cppm  layer.cppm  manager.cppm
mod/application/: application.cppm
mod/config/: config.cppm
mod/core/: application.cppm  assert.cppm  asset_manager.cppm  camera.cppm  config.cppm  config_release.cppm  core.cppm  delta_time.cppm  event.cppm  fps_limiter.cppm  handle.cppm  image.cppm  layer.cppm  log.cppm  task_queue.cppm  time.cppm  traits.cppm  transform.cppm  utils.cppm  verify.cppm  window_manager.cppm
mod/core/audio/: audio.cppm
mod/core/events/: app_event.cppm  event.cppm  event_base.cppm  key_event.cppm  mouse_event.cppm
mod/core/layers/: layer.cppm  layer_imgui.cppm  layer_stack.cppm
mod/gfx/: camera.cppm  graphic.cppm  image.cppm  manager.cppm  material.cppm  mesh.cppm  object.cppm  scene.cppm  source.cppm  transform.cppm  uniform.cppm  utils.cppm
mod/gfx/opengl/: buffer.cppm  context.cppm  renderer.cppm  shader.cppm  texture.cppm  verify.cppm
mod/graphic/: asset.cppm  camera.cppm  camera.hpp  geometry.cppm  graphic.cppm  image.cppm  particle_system.cppm  scene.cppm  source.cppm  traits.cppm
mod/graphic/opengl/: asset_manager.cppm  basic_camera_movement.cppm  buffer.cppm  camera.cppm  camera2d.cppm  context.cppm  default_camera_input_layer.cppm  geometry.cppm  gl_call.hpp  index_buffer.cppm  light.cppm  material.cppm  mesh.cppm  object.cppm  opengl.cppm  opengl_camera.hpp  opengl_context.cppm  opengl_renderer.cppm  opengl_utils.cppm  primitives.cppm  renderer.cppm  scene.cppm  screen_camera.cppm  screen_renderer.cppm  shader.cppm  texture.cppm  utils.cppm  vertex_array.cppm  vertex_buffer.cppm
mod/math/: math.cppm  vector.cppm
mod/platform/: controller.cppm  platform.cppm
mod/platform/xplatform/: xcursor.cppm  xinput.cppm  xwindow.cppm
mod/res/: primitives.cppm  res.cppm  shader.cppm  texture.cppm
mod/ui/: debug.cppm  ui.cppm
res/shader/: basic.glsl
script/: compile_release.bat  compile_release_with_debug_info.bat
scripts/: compile_debug.bat  compile_min_size_release.bat
src/: imgui.cpp
src/core/: application.cpp  event.cpp  layer_stack.cpp  log.cpp  window.cpp
src/graphic/opengl/: index_buffer.cpp  opengl.cpp  opengl_camera.cpp  opengl_context.cpp  opengl_renderer.cpp  shader.cpp  vertex_array.cpp  vertex_buffer.cpp
src/platform/windows/: windows_window.cpp
src/platform/xplatform/: xcursor.cpp  xinput.cpp  xwindow.cpp
